--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="navbar">
+  <div class="navbar-inner">
+    <div class="container">
+    	 <a class="brand" href="#">Treebook</a>
+    <ul class="nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+  </div>
+</div>
+</div>
+	<div class="container">
+		<%= yield %>
+</div>
 </body>
 </html>
